<resources>
    <string name="app_name">Fragment</string>
    <string name="retrofit">Retrofit</string>
    <string name="refresh_product_list">Refresh product list</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="name">Name</string>
    <string name="this_is_product_image">This is product image</string>
    <string name="_1_200">৳ 1,200</string>
    <string name="smooth_and_stylish_design">Smooth and stylish design</string>
    <string name="_4_7">4.7</string>
    <string name="star">Star</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_your_name_email_etc">Change your name, email, etc.</string>
    <string name="notifications">Notifications</string>
    <string name="app_notifications">App Notifications</string>
    <string name="manage_notification_preferences">Manage notification preferences</string>
    <string name="security">Security</string>
    <string name="change_password">Change Password</string>
    <string name="update_your_account_password">Update your account password</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="scanner">Scanner</string>
    <string name="settings">Settings</string>
</resources>